--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
@@ -44,3 +45,8 @@
 .beer-pic {
   width: 100px
 }
+
+body {
+  font-family: 'MyFont' !important
+}
+
