music and recipe cards

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,11 @@
 }
 
 body {
-  font-family: 'MyFont' !important
+  font-family: 'MyFont' !important;
+  font-weight: bolder;
+}
+
+h1, h2, h3, h4, h5, .navbar-brand {
+  font-family: 'Headers' !important;
 }
 
