styling and last second correction

--- a/src/App.css
+++ b/src/App.css
@@ -231,3 +231,9 @@ add-beer-form {
  .recipeSearchForm {
    text-align: center;
  }
+
+ .beerSearch {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
